NXP-29836: Fix gcp-credentials.json retrieval when property is empty